--- a/public/template-landing-page/css/style.css
+++ b/public/template-landing-page/css/style.css
@@ -152,7 +152,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, 0.404);
     z-index: 1;
 }
 
@@ -174,7 +174,7 @@
         position: relative;
         min-height: 450px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -184,7 +184,7 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(../img/gerbang-poltekbangsby23-2.png) center center no-repeat;
     background-size: cover;
 }
 
@@ -206,7 +206,7 @@
 /*** Courses ***/
 .courses {
     min-height: 100vh;
-    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url(../img/gerbang-poltekbangsby23-2.png) center center no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
@@ -300,14 +300,12 @@
 }
 
 .testimonial-carousel .owl-dot.active {
-    width: 40px;
-    height: 40px;
+
     background: var(--primary);
 }
 
 .testimonial-carousel .owl-item img {
-    width: 150px;
-    height: 150px;
+
 }
 
 
